git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@14 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/authentication/login.html.erb
+++ b/app/views/authentication/login.html.erb
@@ -1,5 +1,5 @@
 <div id="login">
-<h1><%=lc :Login-%></h1>
+<h1><%=lc :title-%></h1>
 <%form_tag do-%>
 <table>
 <tr><td class="label"><%=lc :username-%></td><td class="input"><%=text_field :user, :name-%></td></tr>
