git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@21 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/authentication/login.html.erb
+++ b/app/views/authentication/login.html.erb
@@ -1,10 +1,13 @@
+<div class="flash-error"><%= flash[:error]-%></div>
 <div id="login">
-<h1><%=lc :title-%></h1>
+  <h2><%=lc :title-%></h1>
 <%form_tag do-%>
 <table>
-<tr><td class="label"><%=lc :username-%></td><td class="input"><%=text_field :user, :name-%></td></tr>
-<tr><td class="label"><%=lc :password-%></td><td class="input"><%=password_field :user, :password-%></td></tr>
-<tr><td class="button" colspan="2"><%=submit_tag lc(:connect) -%></td></tr>
+  <tr><td class="label"><%=lc :username-%></td><td class="input"><%=text_field :user, :name, :tabindex=>1-%></td><td class="help"><%= link_to lc(:lost_login), :action=>:lost_login-%></td></tr>
+  <tr><td class="label"><%=lc :password-%></td><td class="input"><%=password_field :user, :password, :tabindex=>2%></td><td class="help"><%= link_to lc(:lost_password), :action=>:lost_password-%></td></tr>
+  <tr><td class="button" colspan="3"><%=submit_tag lc(:connect), :tabindex=>3 -%></td></tr>
+  <tr><td class="info" colspan="3"><%=link_to lc(:register), :action=>:register-%></td></tr>
 </table>
 <%end-%>
+<div class="end" colspan="3"></div>
 </div>
