--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -2,8 +2,8 @@
 td, a, p { font-size:13px;}
 html {background: #FFF;}
 a:link, a:visited, a:hover { color:#00C; }
+input[type="text"], input[type="password"] { border:1px solid #00A; background: #FFE;}
 #ibody {margin:0 auto;}
-#logoban{ height:84px; background: #F0F7FF url(/images/ekylibre.png) no-repeat center; }
 /*#menu{ background: #E8ECFF url(/images/template/menu.png) repeat-x center bottom; padding:4px 4px 16px;}*/
 /*#menu {padding-top:1px;}*/
 #menu { border-bottom: 1px solid #DDF; padding:2px 2px 3px;}
@@ -13,7 +13,7 @@ a:link, a:visited, a:hover { color:#00C; }
 #menu #user { text-align:right;}
 /*#menu #user {  border-bottom: 1px solid #CCF; text-align:right; position:absolute; top: 0px;}*/
 #main { padding: 2px;}
-#main h1 { letter-spacing: 5px; font-variant: small-caps; }
+#main h1 { letter-spacing: 4px; font-variant: small-caps; font-size:24px;}
 a.guide:link, a.guide:visited, a.guide:hover{ color: white; font-size:18px; }
 a.guide { float: left; }
 a.guide > div { width: 220px; height:58px; background: url(/images/template/guide.png) no-repeat top left; text-align:center; padding: 180px 18px 18px; }
