--- a/app/views/config/company.html.erb
+++ b/app/views/config/company.html.erb
@@ -1,7 +1,7 @@
 <%=content_tag :h1, @company.name -%>
 <table id="company" class="flex"><tr>
 <td valign="top"><div class="side">
-<%= link_to l(:edit),{:action=>:company_edit}, {:class=>:button}-%>
+<%= link_to l(:edit),{:action=>:company_edit}, {:class=>"button right"}-%>
 <%=content_tag :h2, lc(:identity) -%>
 <div class="tr">
 <div class="td logo">[PHOTO]</div>
@@ -21,16 +21,15 @@ end -%>
 <%=content_tag :h3, lc(:departments) -%>
 <%= ajax_table :departments do |t|
   t.column :name
-  t.column :siret
-  t.column :note
   t.procedure :new_department, {:action=>:new}
 end -%>
-<%=content_tag :h3, lc(:employees) -%>
-<%= ajax_table :employees do |t|
+<%=content_tag :h3, lc(:users) -%>
+<%= ajax_table :users do |t|
+  t.column :last_name
+  t.column :first_name
   t.column :name
-  t.column :siret
-  t.column :note
-  t.procedure :new_employee, {:action=>:new}
+  t.action :edit
+  t.procedure(:new_user, {:action=>:users_create}) if can_access? :users
 end -%>
 <%=content_tag :h3, lc(:bank_accounts) -%>
 <%= ajax_table :bank_accounts do |t|
@@ -43,7 +42,7 @@ end -%>
 </div></td><td valign="top"><div class="side">
 <%=content_tag :h2, lc(:statistics) -%>
 <%=content_tag :h3, lc(:evolution) -%>
-<div align="center"><div style="width:512px; height:256px; border:1px solid red; background: #FFF;">[GRAPHIQUE]</div></div>
+<div align="center"><div style="width:384px; height:256px; border:1px solid red; background: #FFF;">[GRAPHIQUE]</div></div>
 <%=content_tag :h3, lc(:values) -%>
 <%= ajax_table :establishments do |t|
   t.column :name
