--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,5 +1,5 @@
 * {margin:0; padding:0; font-family: Arial, sans-serif;}
-td, a, p { font-size:13px;}
+td, a, p, ul, li { font-size:13px;}
 html {background: #FFF;}
 a:link, a:visited, a:hover { color:#00C; }
 input[type="text"], input[type="password"] { border:1px solid #003; background: #FFF;}
@@ -14,8 +14,8 @@ input[type="text"], input[type="password"] { border:1px solid #003; background: 
 /*#menu #user {  border-bottom: 1px solid #CCF; text-align:right; position:absolute; top: 0px;}*/
 #main { padding: 2px;}
 #main h1 { letter-spacing: 4px; font-variant: small-caps; font-size:24px;}
-#main h2 { height:20px; }
-#main h3 { height:16px; }
+#main h2 { font-size:20px; }
+#main h3 { font-size:16px; }
 
 a.guide:link, a.guide:visited, a.guide:hover{ color: white; font-size:18px; }
 a.guide { float: left; }
@@ -41,7 +41,7 @@ div.td { display: table-cell; }
 #company div.side .value {color:#227;  padding: 2px;}
 #company .futo { padding: 2px 0px 10px; }
 
-.flash-error { padding: 10px; background: #FDD; color: red; text-align:center; font-weight: bold; }
+.flash-error { padding: 10px; background: #FFF; color: red; text-align:center; font-weight: bold; }
 
 .formalize { width: 774px; margin-left: auto; margin-right: auto; }
 .formalize .fields table { border-collapse: collapse; width:100%; }
@@ -88,7 +88,7 @@ div.futo table.list tr td.act {background: #FDD; width:16px; }/*border: 1px soli
 
 a.right { float:right; }
 
-/* BEGIN BUTTON STYLES */
+/* BEGIN BUTTON */
 input[type="submit"], a.button:link, a.button:visited { text-decoration:none; border:1px solid #BBB; color:#444; background: #CCC url(/images/template/button.png) repeat-x top; -moz-border-radius: 4px;}
 input[type="submit"] { padding:1px 5px 2px; }
 a.button:link, a.button:visited { padding: 3px 8px;}
@@ -96,9 +96,15 @@ input[type="submit"]:hover, a.button:hover { border:2px solid #DA4; color: #555;
 input[type="submit"]:active, a.button:active, input[type="submit"]:focus, a.button:focus { border:2px solid #68C; color: #555; text-decoration:none; background: #CCC url(/images/template/button_hover.png) repeat-x top; }
 input[type="submit"]:hover, input[type="submit"]:active, input[type="submit"]:focus { padding:0px 4px 1px; }
 a.button:hover, a.button:active, a.button:focus { padding: 2px 7px;}
-/* END */
+/* END BUTTON */
 
-.journal { margin:8px; float:left; background: #DDF; width:160px; height:200px;}
-.journal > div { background: url(/images/template/journal.png); width:115px; height:120px; padding: 40px 27px 40px 18px; text-align:center; vertical-align: middle; color: white;}
-#new-journal { background: yellow; }
-#new-journal > div { background: url(/images/template/new_journal.png);}
+.journal { margin:2px; float:left; background: #DDF; background: url(/images/template/journal.png); width:80px; height:80px; padding: 50px 30px; text-align:center; vertical-align: middle; color: #007;}
+.new-journal { background: url(/images/template/new_journal.png); }
+
+
+.errorExplanation { border:4px dotted red; background: #F52; font-size:11px; color: #FFF; margin:16px; }
+.errorExplanation h2 { background: red; color: #FFF; margin:0px; padding: 2px; font-size:13px; text-align:center; font-variant: small-caps; }
+.errorExplanation p  { padding: 2px 8px; }
+.errorExplanation ul { padding: 2px 24px; }
+.errorExplanation ul li { list-style-type: square; }
+
