git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@93 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/config/company_edit.html.erb
+++ b/app/views/config/company_edit.html.erb
@@ -1,8 +1,8 @@
 <%= # >
 formalize(:title=>lc(:title,[@company.name])) do |f|
 f.title lc(:general)
-f.line :name, :company
-f.line :code, :company, :info=>lc(:company_code_info)
-f.line :siren, :company
+f.field :company, :name
+f.field :company, :code
+f.field :company, :siren
 end
 -%>
