--- a/app/views/authentication/register.html.erb
+++ b/app/views/authentication/register.html.erb
@@ -7,14 +7,14 @@
     <%= # To indent with Emacs, I put >
     formalize(:multipart=>false) do |f|
     f.title :my_company
-    f.line :name, :company, {:example=>lc(:company_name_example)}
-    f.line :siren, :company, :example=>lc(:company_siren_example)
+    f.field :company, :name, {:example=>lc(:company_name_example)}
+    f.field :company, :siren
     f.title :my_self
-    f.line :last_name, :user, :example=>lc(:user_last_name_example)
-    f.line :first_name, :user, :example=>lc(:user_first_name_example)
-    f.line :name, :user, :example=>lc(:user_name_example), :info=>lc(:user_name_info)
-    f.line :password, :user, :null=>false, :hint=>lc(:user_password_hint)
-    f.line :password_confirmation, :user, :null=>false, :info=>lc(:user_password_confirmation_info)
+    f.field :user, :last_name
+    f.field :user, :first_name, :example=>lc(:user_first_name_example)
+    f.field :user, :name, :example=>lc(:user_name_example), :info=>lc(:user_name_info)
+    f.field :user, :password, :null=>false, :hint=>lc(:user_password_hint)
+    f.field :user, :password_confirmation, :null=>false, :info=>lc(:user_password_confirmation_info)
     end
     -%>
   </div>
