--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -2,7 +2,7 @@
 td, a, p, ul, li { font-size:13px;}
 html {background: #FFF;}
 a:link, a:visited, a:hover { color:#00C; }
-input[type="text"], input[type="password"] { border:1px solid #003; background: #FFF;}
+input[type="text"], input[type="password"] { border:1px solid #333; background: #f5f5f5;}
 #ibody {margin:0 auto;}
 /*#menu{ background: #E8ECFF url(/images/template/menu.png) repeat-x center bottom; padding:4px 4px 16px;}*/
 /*#menu {padding-top:1px;}*/
@@ -43,17 +43,20 @@ div.td { display: table-cell; }
 
 .flash-error { padding: 10px; background: #FFF; color: red; text-align:center; font-weight: bold; }
 
-.formalize { width: 774px; margin-left: auto; margin-right: auto; }
+.formalize { margin-left: auto; margin-right: auto; }
 .formalize .fields table { border-collapse: collapse; width:100%; }
 .formalize .fields table td.label { text-align:right; padding:1px 4px; color: #008;}
 .formalize .fields table td.input { padding:2px 6px 2px 2px; }
-.formalize .fields table input.notnull { border: 1px solid #99D; background: #F7F7FF }
+.formalize .fields table input.notnull { border: 1px solid #00F; background: #F0F2FF }
 .formalize .fields table td.help  { text-align:left; padding:2px 2px 2px 6px; font-size: 11px; border-left:1px dashed #CCC;}
-.formalize .fields table td .info         { color: #007;  background:#CDF; padding:2px; }
+.formalize .fields table td .info         { color: #007; padding:2px; }
+z.formalize .fields table td .info         { color: #007;  background:#CDF; padding:2px; }
 .formalize .fields table td .info span    { color: #55C; }
-.formalize .fields table td .example      { color: #040;  background:#CFC; padding:2px; }
+.formalize .fields table td .example      { color: #040; padding:2px; }
+z.formalize .fields table td .example      { color: #040;  background:#CFC; padding:2px; }
 .formalize .fields table td .example span { color: #4A5; }
-.formalize .fields table td .hint         { color: #600;  background:#FDE; padding:2px;}
+.formalize .fields table td .hint         { color: #600; padding:2px;}
+z.formalize .fields table td .hint         { color: #600;  background:#FDE; padding:2px;}
 .formalize .fields table td .hint span    { color: #B54; }
 .formalize .fields table tr.title th { padding: 2px 8px; border-bottom: 0px dotted #002; color: #002; font-size:15px; background: #F0F8FF url(/images/template/form_subtitle.png) repeat-x top;}
 /*.formalize .fields table th.title { padding: 2px 8px ; color: #002; font-size:15px; background: url(/images/template/form_subtitle.png) repeat-x top;}*/
@@ -92,7 +95,7 @@ a.right { float:right; }
 input[type="submit"], a.button:link, a.button:visited { text-decoration:none; border:1px solid #BBB; color:#444; background: #CCC url(/images/template/button.png) repeat-x top; -moz-border-radius: 4px;}
 input[type="submit"] { padding:1px 5px 2px; }
 a.button:link, a.button:visited { padding: 3px 8px;}
-input[type="submit"]:hover, a.button:hover { border:2px solid #DA4; color: #555; text-decoration:none; background: #DDD url(/images/template/button_hover.png) repeat-x top; }
+input[type="submit"]:hover, a.button:hover { border:2px solid #EB4; color: #555; text-decoration:none; background: #DDD url(/images/template/button_hover.png) repeat-x top; }
 input[type="submit"]:active, a.button:active, input[type="submit"]:focus, a.button:focus { border:2px solid #68C; color: #555; text-decoration:none; background: #CCC url(/images/template/button_hover.png) repeat-x top; }
 input[type="submit"]:hover, input[type="submit"]:active, input[type="submit"]:focus { padding:0px 4px 1px; }
 a.button:hover, a.button:active, a.button:focus { padding: 2px 7px;}
