--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,21 +1,35 @@
 * {margin:0; padding:0; font-family: Arial, sans-serif;}
-td, a, p, ul, li { font-size:13px;}
 html {background: #FFF;}
+td, a, p { font-size:13px;}
 a:link, a:visited, a:hover { color:#00C; }
-input[type="text"], input[type="password"] { border:1px solid #333; background: #f5f5f5;}
-#ibody {margin:0 auto;}
-/*#menu{ background: #E8ECFF url(/images/template/menu.png) repeat-x center bottom; padding:4px 4px 16px;}*/
-/*#menu {padding-top:1px;}*/
-#menu { border-bottom: 1px solid #DDF; padding:2px 2px 3px;}
-#menu > table { width:100%; }
-#menu a, #menu strong { padding: 4px 5px; }
-#modules a.current { border: 1px solid #DDF; border-bottom-color: white; position:relative; top:1px; }
-#menu #user { text-align:right;}
-/*#menu #user {  border-bottom: 1px solid #CCF; text-align:right; position:absolute; top: 0px;}*/
-#main { padding: 2px;}
-#main h1 { letter-spacing: 4px; font-variant: small-caps; font-size:24px;}
-#main h2 { font-size:20px; }
-#main h3 { font-size:16px; }
+input[type="text"], input[type="password"] { border:1px solid #003; background: #FFF;}
+/*
+body { background: #ADA; }
+[xul] { overflow: auto; }
+div[xul="hbox"] > div, [orient="horizontal"] > div { float:left; }
+div[xul="splitter"] { background:#777; border:none; padding:2px; }
+div[xul="hbox"] { background: #CDF; }
+div[xul="vbox"] { background: #FDC; }
+div[xul="box"] { background: #ADA; }
+*/
+
+#top { border-bottom: 1px solid #C9D7F1; margin-bottom:2px;}
+#guide { float:left; height:20px;}
+#user { float:right; height:20px;}
+#columns { }
+#columns > div { float:left; }
+#side { width: 150px; }
+#main { background:#DEF; overflow: auto; }
+#help { width: 150px; }
+
+.clearfix:after { content: "."; display:block; height:0; clear: both; visibility: hidden; }
+/* backslash hack hides from IE mac \*/
+* html .clearfix { height: 1%; }
+.clearfix { display: block; }
+/* end backslash hack*/
+
+.location {background: #AE5;}
+
 
 a.guide:link, a.guide:visited, a.guide:hover{ color: white; font-size:18px; }
 a.guide { float: left; }
@@ -41,22 +55,19 @@ div.td { display: table-cell; }
 #company div.side .value {color:#227;  padding: 2px;}
 #company .futo { padding: 2px 0px 10px; }
 
-.flash-error { padding: 10px; background: #FFF; color: red; text-align:center; font-weight: bold; }
+.flash-error { padding: 10px; background: #FDD; color: red; text-align:center; }
 
-.formalize { margin-left: auto; margin-right: auto; }
+.formalize { width: 774px; margin-left: auto; margin-right: auto; }
 .formalize .fields table { border-collapse: collapse; width:100%; }
 .formalize .fields table td.label { text-align:right; padding:1px 4px; color: #008;}
 .formalize .fields table td.input { padding:2px 6px 2px 2px; }
-.formalize .fields table input.notnull { border: 1px solid #00F; background: #F0F2FF }
+.formalize .fields table input.notnull { border: 1px solid #99D; background: #F7F7FF }
 .formalize .fields table td.help  { text-align:left; padding:2px 2px 2px 6px; font-size: 11px; border-left:1px dashed #CCC;}
-.formalize .fields table td .info         { color: #007; padding:2px; }
-z.formalize .fields table td .info         { color: #007;  background:#CDF; padding:2px; }
+.formalize .fields table td .info         { color: #007;  background:#CDF; padding:2px; }
 .formalize .fields table td .info span    { color: #55C; }
-.formalize .fields table td .example      { color: #040; padding:2px; }
-z.formalize .fields table td .example      { color: #040;  background:#CFC; padding:2px; }
+.formalize .fields table td .example      { color: #040;  background:#CFC; padding:2px; }
 .formalize .fields table td .example span { color: #4A5; }
-.formalize .fields table td .hint         { color: #600; padding:2px;}
-z.formalize .fields table td .hint         { color: #600;  background:#FDE; padding:2px;}
+.formalize .fields table td .hint         { color: #600;  background:#FDE; padding:2px;}
 .formalize .fields table td .hint span    { color: #B54; }
 .formalize .fields table tr.title th { padding: 2px 8px; border-bottom: 0px dotted #002; color: #002; font-size:15px; background: #F0F8FF url(/images/template/form_subtitle.png) repeat-x top;}
 /*.formalize .fields table th.title { padding: 2px 8px ; color: #002; font-size:15px; background: url(/images/template/form_subtitle.png) repeat-x top;}*/
@@ -91,23 +102,13 @@ div.futo table.list tr td.act {background: #FDD; width:16px; }/*border: 1px soli
 
 a.right { float:right; }
 
-/* BEGIN BUTTON */
+/* BEGIN BUTTON STYLES */
 input[type="submit"], a.button:link, a.button:visited { text-decoration:none; border:1px solid #BBB; color:#444; background: #CCC url(/images/template/button.png) repeat-x top; -moz-border-radius: 4px;}
 input[type="submit"] { padding:1px 5px 2px; }
 a.button:link, a.button:visited { padding: 3px 8px;}
-input[type="submit"]:hover, a.button:hover { border:2px solid #EB4; color: #555; text-decoration:none; background: #DDD url(/images/template/button_hover.png) repeat-x top; }
+input[type="submit"]:hover, a.button:hover { border:2px solid #DA4; color: #555; text-decoration:none; background: #DDD url(/images/template/button_hover.png) repeat-x top; }
 input[type="submit"]:active, a.button:active, input[type="submit"]:focus, a.button:focus { border:2px solid #68C; color: #555; text-decoration:none; background: #CCC url(/images/template/button_hover.png) repeat-x top; }
 input[type="submit"]:hover, input[type="submit"]:active, input[type="submit"]:focus { padding:0px 4px 1px; }
 a.button:hover, a.button:active, a.button:focus { padding: 2px 7px;}
-/* END BUTTON */
-
-.journal { margin:2px; float:left; background: #DDF; background: url(/images/template/journal.png); width:80px; height:80px; padding: 50px 30px; text-align:center; vertical-align: middle; color: #007;}
-.new-journal { background: url(/images/template/new_journal.png); }
-
-
-.errorExplanation { border:4px dotted red; background: #F52; font-size:11px; color: #FFF; margin:16px; }
-.errorExplanation h2 { background: red; color: #FFF; margin:0px; padding: 2px; font-size:13px; text-align:center; font-variant: small-caps; }
-.errorExplanation p  { padding: 2px 8px; }
-.errorExplanation ul { padding: 2px 24px; }
-.errorExplanation ul li { list-style-type: square; }
+/* END */
 
