git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@117 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,19 +6,17 @@
     = title_tag
     = stylesheet_link_tag :defaults
     = javascript_include_tag :defaults
-  %body
+  %body{:onload=>'resize();',:onresize=>'resize();'}
     #top
       = location_tag :guide
       %div{:style=>'left:0pt;'}
       = location_tag :user
       %div{:style=>'clear:both;'}
-    #columns.clearfix
-      = location_tag :side
-      #main
+    #columns.clearfix{:orient=>:horizontal}
+      = location_tag (:side, :orient=>:vertical)
+      #main{:flex=>3}
         = flash_tag :error
         = flash_tag :warning
         = flash_tag :notice
         = yield
-      = location_tag :help
-    #bottom
-      = location_tag :bottom           
+      = location_tag(:help, :flex=>1, :collapse=>:after) if params[:help]
