git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@126 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/accounts.html.erb
+++ b/app/views/accountancy/accounts.html.erb
@@ -1,9 +1,3 @@
 <h1><%=lc(:title)-%></h1>
 
-<%=
-ajax_table :accounts do |t|
-  t.column :name
-  t.column :number
-end
-
--%>
+<%=dyta :accounts-%>
