--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -18,8 +18,14 @@ div[xul="box"] { background: #ADA; }
 #user { float:right; height:20px;}
 #columns { }
 #side { width: 150px; border-right: 1px solid #C9D7F1;}
-#main { overflow: auto; padding: 4px; }
+#main { overflow: auto; }
+#yield { padding: 4px; }
 #help { width: 150px; border-left: 1px solid #C9D7F1;}
+#help > h2 { background: #C9D7F1; font-size: 20px; text-align:center; height:24px; padding:4px; vertical-align: center; }
+.help-link { float:right; }
+.help-link > a > div { width: 32px; height:32px; }
+#help-open { background: url(/images/template/help-open.png); }
+#help-close { background: url(/images/template/help-close.png); }
 
 .clearfix:after { content: "."; display:block; height:0; clear: both; visibility: hidden; }
 /* backslash hack hides from IE mac \*/
@@ -31,9 +37,11 @@ div[xul="box"] { background: #ADA; }
 .splitter { background: red; }
 .splitter:hover { cursor: pointer; }
 */
+
+
 #side > div { background: #AEA; margin: 8px 2px 0px; border:2px solid #AEA; -moz-border-radius-topleft: 4px; -moz-border-radius-topright: 4px; }
 #side > div > div { background: #FFF }
-#side > div * { font-size: 11px; font-weight: normal; }
+#side > div * { font-size: 11px; font-weight: normal; color: #444; }
 
 a.guide:link, a.guide:visited, a.guide:hover{ color: white; font-size:18px; }
 a.guide { float: left; }
