--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -14,14 +14,15 @@ div[xul="box"] { background: #ADA; }
 */
 
 #top { border-bottom: 1px solid #C9D7F1; }
-#guide { float:left; height:20px;}
+#guide { float:left; height:18px; padding:1px 4px;}
 #user { float:right; height:20px;}
 #columns { }
-#side { width: 150px; border-right: 1px solid #C9D7F1;}
+#side { width: 150px; border-right: 1px dotted #C9D7F1;}
 #main { overflow: auto; }
 #yield { padding: 4px; }
-#help { width: 150px; border-left: 1px solid #C9D7F1;}
+#help { width: 150px; /*border-left: 1px dotted #C9D7F1;*/ background: #E3F4FF;}
 #help > h2 { background: #C9D7F1; font-size: 20px; text-align:center; height:24px; padding:4px; vertical-align: center; }
+#help > div { padding: 2px 4px; }
 .help-link { float:right; }
 .help-link > a > div { width: 32px; height:32px; }
 #help-open { background: url(/images/template/help-open.png); }
@@ -32,16 +33,13 @@ div[xul="box"] { background: #ADA; }
 * html .clearfix { height: 1%; }
 .clearfix { display: block; }
 /* end backslash hack*/
-/*
-.location { background: #AE5; }
-.splitter { background: red; }
-.splitter:hover { cursor: pointer; }
-*/
 
 
 #side > div { background: #AEA; margin: 8px 2px 0px; border:2px solid #AEA; -moz-border-radius-topleft: 4px; -moz-border-radius-topright: 4px; }
 #side > div > div { background: #FFF }
 #side > div * { font-size: 11px; font-weight: normal; color: #444; }
+
+#guide > * { padding: 2px; margin-top:1px; }
 
 a.guide:link, a.guide:visited, a.guide:hover{ color: white; font-size:18px; }
 a.guide { float: left; }
