git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@145 67a09383-3dfa-4221-8551-890bac9c277c

--- a/public/stylesheets/layouts/authentication.css
+++ b/public/stylesheets/layouts/authentication.css
@@ -1,5 +1,5 @@
-#logoban { height:64px; background: url(/images/ekylibre.png) no-repeat center; }
-#login   { width:512px; border: none; margin:10px auto 56px; background:#F0F3FF;}
+#login   { width:512px; border: none; margin:10px auto 56px; background:#F0F3FF; z-index: 1000;}
+#login .logoban { height:64px; background: url(/images/ekylibre.png) no-repeat center; }
 #login h2 { background: url(/images/template/gradient.png) repeat-x top; color:white; padding: 2px; text-align:center; font-size:18px;}
 #login table { border-collapse: collapse;  margin:16px auto; margin-left:auto; margin-right:auto;}
 #login table tr td { padding: 2px 4px;}
