git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@149 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/entries.html.haml
+++ b/app/views/accountancy/entries.html.haml
@@ -1,2 +1,9 @@
 %h1=lc(:title)
+-form_tag '/journal_entries' do
+  =select_tag "journal", @journal
+  =submit_tag "ok"   
+end  
+
 =dyta(:entries)
+   
+
