--- a/app/views/accountancy/entries.html.haml
+++ b/app/views/accountancy/entries.html.haml
@@ -1,8 +1,9 @@
 %h1=lc(:title)
--form_tag '/journal_entries' do
-  =select_tag "journal", @journal
-  =submit_tag "ok"   
-end  
+%table
+  -form_tag '/journal_entries' do
+    =select_tag "journal", @journal
+    =submit_tag "ok"   
+  end  
 
 =dyta(:entries)
    
