git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@164 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,4 +17,4 @@
         = flash_tag :notice
         #yield
           = yield
-      #help{:style=>"display:none;"}
+      #help{:style=>"display:none;",:flex=>1}
