--- a/app/views/help/_search.html.haml
+++ b/app/views/help/_search.html.haml
@@ -1,5 +1,6 @@
 .nav
   - unless @previous.nil?
     #help-previous=link_to_remote(content_tag(:div , "&nbsp;"),:url=>{:controller=>:help , :action=>:search, :id=>@previous})
-  #help-close.help-link=link_to_remote(content_tag(:div , "&nbsp;"),:url=>{:controller=>:help , :action=>:close},:complete => "toggleHelp();")
-%div=retrieve(@id,'start-help')
+  #help-close.help-link=link_to_remote(content_tag(:div , "&nbsp;"),:url=>{:controller=>:help , :action=>:close},:complete => "closeHelp();")
+  %div=retrieve(@id,'start-help')
+  %button
