--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,4 +17,6 @@
         = flash_tag :notice
         #yield
           = yield
-      #help{:style=>"display:none;",:flex=>1}
+      #help{:flex=>1, :style=>(session[:help] ? "" : "display:none")}
+        = render :partial=>'help/search' if session[:help]
+ 
