git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@167 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/help/_search.html.haml
+++ b/app/views/help/_search.html.haml
@@ -1,6 +1,11 @@
 .nav
-  - unless @previous.nil?
-    #help-previous=link_to_remote(content_tag(:div , "&nbsp;"),:url=>{:controller=>:help , :action=>:search, :id=>@previous})
   #help-close.help-link=link_to_remote(content_tag(:div , "&nbsp;"),:url=>{:controller=>:help , :action=>:close},:complete => "closeHelp();")
   %div=retrieve(@id,'start-help')
-  %button
+  - unless @previous.nil?
+    #help-previous=link_to_remote(content_tag(:div ,"precedent"),:url=>{:controller=>:help , :action=>:search, :id=>@previous } )
+
+
+  <!--#help-previous=link_to_remote(content_tag(:div , "precedent"),:url=>{:controller=>:help , :action=>:search, :id=>@previous}, :update=>"search")-->
+  <!--%p=@previous.to_s-->
+ 
+  
