--- a/app/views/accountancy/entries.html.haml
+++ b/app/views/accountancy/entries.html.haml
@@ -1,12 +1,14 @@
 %h1=lc(:title)
-- form_tag '/journal_entries' do
+=puts session[:journal]
+- form_tag (:action => 'journal_entries') do
   %table
     %tr
       %td.label=lc :select
       %td.select=select "journal", "id",  @journals.collect{|j| [j.name, j.id]}
       %td.button=submit_tag "ok"   
+#entries
 =dyta(:entries)
-- form_remote_tag({}, :update=> :entries.to_s, :url=>( :action=>) , :name=>@entry) do 
+- form_remote_tag(:update=> :entries, :url=> {:action=> :entries_create}, :name=>@entry) do 
   %table
     %tr
       %td.label=lc :record_number
@@ -17,12 +19,13 @@
       %td.label=lc :debit
       %td.label=lc :credit
     %tr
-      %td.input=text_field :journal_record, :number, {:disabled=>true, :size=>2}
-      %td.input=text_field :journal_record, :created_on, {:disabled=>true, :size=>2} 
-      %td.input=text_field :journal_record, :printed_on, {:tabindex=>1, :size=>2} 
-      %td.input=text_field :account, :name, {:tabindex=>2, :size=>2}
-      %td.input=text_field :account, :number, {:tabindex=>3, :size=>2} 
-      %td.input=text_field :entry, :debit, {:tabindex=>4, :size=>2, :value=>0}
-      %td.input=text_field :entry, :credit, {:tabindex=>4, :size=>2, :value=>0}
-      %td.button=submit_tag(lc :entry_validate), :confirm=>(lc :confirmation)
-    
+      %td.input=text_field :record, :number, {:size=>5, :focus => true, :tabindex=>1}
+      %td.input=text_field :record, :created_on, {:value=>Date.today, :size=>14}
+      %td.input=text_field :record, :printed_on, {:tabindex=>2, :size=>14} 
+      %td.input=text_field :entry, :name, {:tabindex=>3, :size=>14}
+      %td.input=text_field :account, :number, {:tabindex=>4, :size=>14} 
+      %td.input=text_field :entry, :debit, {:tabindex=>5, :size=>3, :value=>0}
+      %td.input=text_field :entry, :credit, {:tabindex=>6, :size=>3, :value=>0}
+      %td.button=submit_tag(lc(:entry_validate))
+
+
